Fixed layout issue which caused short results to render in a weird position.

--- a/scss/ug-data/search.scss
+++ b/scss/ug-data/search.scss
@@ -27,4 +27,8 @@
 		border: 1px solid #777;
 		padding: 1em;
 	}
+
+	.results {
+		float: left;
+	}
 }
